--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,26 +10,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.oddhov.facebookcalendarsync.MainActivity">
 
-    <Button
-        android:id="@+id/btnLogOut"
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/btnLogOut" />
-
-    <Button
-        android:id="@+id/btnSynAll"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/btnSyncAll" />
-
-    <Button
-        android:id="@+id/btnSyncUpcoming"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="@string/btnSyncUpcoming" />
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="30dp"
+        android:layout_gravity="center_horizontal"/>
 
     <Button
         android:id="@+id/btnRetrieveToken"
