--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,4 +38,11 @@
         android:layout_gravity="center_horizontal"
         android:text="Retrieve token from AccountManager" />
 
+    <Button
+        android:id="@+id/btnRevokeToken"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Revoke token" />
+
 </LinearLayout>
