--- a/app/src/main/res/layout/sync_fragment.xml
+++ b/app/src/main/res/layout/sync_fragment.xml
@@ -3,9 +3,18 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <Button
+        android:id="@+id/btnSynAll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="SyncFragment"/>
+        android:layout_gravity="center_horizontal"
+        android:text="@string/button_sync_all" />
+
+    <Button
+        android:id="@+id/btnSyncUpcoming"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/button_sync_upcoming" />
 
 </LinearLayout>
