Changed navigation drawer height to 200 and made drawer items non selectable

--- a/app/src/main/res/layout/navigation_drawer_header.xml
+++ b/app/src/main/res/layout/navigation_drawer_header.xml
@@ -5,4 +5,4 @@
     android:layout_height="wrap_content"
     android:src="@drawable/navigation_header_background"
     android:adjustViewBounds="true"
-    android:scaleType="fitXY"/>
+    android:scaleType="center"/>
