--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,8 +2,10 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#a64dff</item>
-        <item name="colorPrimaryDark">#8c1aff</item>
+        <item name="colorPrimary">@color/deepPurple</item>
+        <item name="colorPrimaryDark">@color/deepPurpleDark</item>
+        <item name="android:textColorPrimary">@android:color/black</item>
+
     </style>
 
     <style name="AppTheme.NoActionBar">
