--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,9 @@
     <color name="deepPurpleDark">#512DA8</color>
     <color name="deepPurple">#673AB7</color>
     <color name="deepPurpleLight">#D1C4E9</color>
+    <color name="black">#000000</color>
     <color name="greyDark">#757575</color>
     <color name="greyLight">#BDBDBD</color>
     <color name="amber">#FFC107</color>
+    <color name="amberDark">#FFC107</color>
 </resources>
