--- a/app/src/main/res/layout/fragment_sync_settings.xml
+++ b/app/src/main/res/layout/fragment_sync_settings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,17 +24,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/spacing_tiny"
                 android:gravity="left"
-                android:textSize="@dimen/font_normal"
+                android:text="@string/sync_settings_wifi"
                 android:textColor="@color/black"
-                android:text="@string/sync_settings_wifi"/>
+                android:textSize="@dimen/font_normal" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
-                android:textSize="@dimen/font_smaller"
+                android:text="@string/sync_settings_wifi_description"
                 android:textColor="@color/greyLight"
-                android:text="@string/sync_settings_wifi_description"/>
+                android:textSize="@dimen/font_smaller" />
         </LinearLayout>
 
         <LinearLayout
@@ -77,17 +78,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/spacing_tiny"
                 android:gravity="left"
-                android:textSize="@dimen/font_normal"
+                android:text="@string/sync_settings_notifications"
                 android:textColor="@color/black"
-                android:text="@string/sync_settings_notifications"/>
+                android:textSize="@dimen/font_normal" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
-                android:textSize="@dimen/font_smaller"
+                android:text="@string/sync_settings_notifications_description"
                 android:textColor="@color/greyLight"
-                android:text="@string/sync_settings_notifications_description"/>
+                android:textSize="@dimen/font_smaller" />
         </LinearLayout>
 
         <LinearLayout
@@ -132,17 +133,17 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/spacing_tiny"
                 android:gravity="left"
-                android:textSize="@dimen/font_normal"
-                android:textColor="@color/greyDark"
-                android:text="@string/sync_settings_sync_interval"/>
+                android:text="@string/sync_settings_sync_interval"
+                android:textColor="@color/black"
+                android:textSize="@dimen/font_normal" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
-                android:textSize="@dimen/font_smaller"
+                android:text="@string/sync_settings_sync_interval_description"
                 android:textColor="@color/greyLight"
-                android:text="@string/sync_settings_sync_interval_description"/>
+                android:textSize="@dimen/font_smaller" />
         </LinearLayout>
 
         <LinearLayout
@@ -157,10 +158,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
-                android:textSize="@dimen/font_small"
-                android:textColor="@color/amberDark"
                 android:includeFontPadding="false"
-                android:text="@string/sync_settings_sync_interval_1hr"/>
+                android:text="@string/sync_settings_sync_interval_1hr"
+                android:textColor="@color/amberDark"
+                android:textSize="@dimen/font_small" />
         </LinearLayout>
 
     </LinearLayout>
