Implemented Facebook settings view components

--- a/app/src/main/res/layout/fragment_sync_settings.xml
+++ b/app/src/main/res/layout/fragment_sync_settings.xml
@@ -160,7 +160,7 @@
                 android:layout_gravity="right"
                 android:includeFontPadding="false"
                 android:text="@string/sync_settings_sync_interval_1hr"
-                android:textColor="@color/amberDark"
+                android:textColor="@color/amberDarker"
                 android:textSize="@dimen/font_small" />
         </LinearLayout>
 
