RSVP preference stored and used

--- a/app/src/main/res/layout/fragment_facebook_settings.xml
+++ b/app/src/main/res/layout/fragment_facebook_settings.xml
@@ -6,6 +6,42 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/llSetupRsvpRange"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/spacing_normal"
+        android:layout_marginLeft="@dimen/spacing_normal"
+        android:layout_marginRight="@dimen/spacing_normal"
+        android:layout_marginTop="@dimen/spacing_large"
+        android:orientation="horizontal"
+        android:visibility="visible">
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="3"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/spacing_tiny"
+                android:gravity="left"
+                android:text="@string/facebook_settings_rsvp_range"
+                android:textColor="@color/black"
+                android:textSize="@dimen/font_normal" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:text="@string/facebook_settings_rsvp_range_description"
+                android:textColor="@color/greyLight"
+                android:textSize="@dimen/font_smaller" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="@dimen/spacing_normal"
@@ -32,7 +68,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="left"
-                android:text="@string/facebook_settings_show_link_description"
+                android:text="@string/facebook_settings_sync_range_description"
                 android:textColor="@color/greyLight"
                 android:textSize="@dimen/font_smaller" />
         </LinearLayout>
