--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="deepPurpleDark">#512DA8</color>
-    <color name="deepPurple">#673AB7</color>
-    <color name="deepPurpleLight">#D1C4E9</color>
+    <!-- Greyscales -->
     <color name="black">#000000</color>
     <color name="greyDark">#757575</color>
     <color name="greyLight">#BDBDBD</color>
+    <color name="white">#FFFFFF</color>
+
+    <!-- Purple -->
+    <color name="deepPurpleDark">#512DA8</color>
+    <color name="deepPurple">#673AB7</color>
+    <color name="deepPurpleLight">#D1C4E9</color>
+
+    <!-- Amber -->
     <color name="amberLighter">#FFD967</color>
     <color name="amberLight">#FFCE3D</color>
     <color name="amber">#FFC107</color>
